force-app/main/default/objects/RD_tblMfgData__c/RD_tblMfgData__c.object-meta.xml
<CustomObject>
    <label>RD tblMfgData</label>
    <nameField>
        <label>RD tblMfgData</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD tblMfgData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>