force-app/main/default/objects/RD_tblMfgData__c/fields/AMBIENT_AVG__c.field-meta.xml
<CustomField>
    <fullName>AMBIENT_AVG__c</fullName>
    <label>AMBIENT_AVG</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>