force-app/main/default/objects/RD_tblMfgData__c/fields/MCSM__c.field-meta.xml
<CustomField>
    <fullName>MCSM__c</fullName>
    <label>MCSM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>