force-app/main/default/objects/RD_tblMfgData__c/fields/PartNo__c.field-meta.xml
<CustomField>
    <fullName>PartNo__c</fullName>
    <label>PartNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>