force-app/main/default/objects/RD_tblMfgData__c/fields/SEALTYPE__c.field-meta.xml
<CustomField>
    <fullName>SEALTYPE__c</fullName>
    <label>SEALTYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>