force-app/main/default/objects/RD_tblMfgData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>STC__c</columns>
    <columns>AMBIENT_AVG__c</columns>
    <columns>M280__c</columns>
    <columns>M220__c</columns>
    <columns>M390__c</columns>
    <columns>MCD__c</columns>
    <columns>MCSM__c</columns>
    <columns>PartNo__c</columns>
    <columns>SEALTYPE__c</columns>
    <columns>TEMP_AVG__c</columns>
    <columns>TEMP_VAL__c</columns>
    <columns>WorkorderNo__c</columns>
    <columns>SerialNo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTC__c</field>
        <operation>equals</operation>
        <value>CDC</value>
    </filters>
    <filters>
        <field>PTC__c</field>
        <operation>equals</operation>
        <value>CDV</value>
    </filters>
    <filters>
        <field>PTC__c</field>
        <operation>equals</operation>
        <value>LLD</value>
    </filters>
    <filters>
        <field>PTC__c</field>
        <operation>equals</operation>
        <value>LLV</value>
    </filters>
    <filters>
        <field>SZC__c</field>
        <operation>equals</operation>
        <value>0400</value>
    </filters>
    <filters>
        <field>STC__c</field>
        <operation>notEqual</operation>
        <value>FS</value>
    </filters>
    <filters>
        <field>STC__c</field>
        <operation>notEqual</operation>
        <value>SF</value>
    </filters>
    <filters>
        <field>MCD__c</field>
        <operation>equals</operation>
        <value>002</value>
    </filters>
    <filters>
        <field>AMBIENT_AVG__c</field>
        <operation>greaterThan</operation>
        <value>40</value>
    </filters>
    <filters>
        <field>M280__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>